tests/fixtures/valid/resources/views/valid-get.blade.php
<?php

{{ Config::get('app.valid_key') }}
