tests/fixtures/invalid/resources/views/invalid-nested-get.blade.php
<?php

{{ Config::get('app.nested.invalid_key') }}
